# OpenglTempalate

./: .gitignore  CMakeLists.txt  README.md
include/engine/: gameMath.h  input.h  openglApi.h  window.h
include/glad/: glad.h
lib/: glfw3.lib  imgui.lib  spdlog.lib
src/: .clang-format  main.cpp
src/engine/: gameMath.cpp  input.cpp  openglApi.cpp  window.cpp
src/glad/: glad.c
